refactor: Improve examples

--- a/src/context-1/page-cmp-1.1.html
+++ b/src/context-1/page-cmp-1.1.html
@@ -1,3 +1,3 @@
-<h1 class="cmp-1-1">Component 1.1</h1>
-<div class="component-path">app / context-1 / cmp-1-1</div>
-<p>Property: <span class="cmp-prop" ng-bind="$ctrl.prop"></span></p>
+<h1 class="page-cmp-1-1">Page 1.1</h1>
+<div class="component-path">app / context-1 / page-cmp-1-1</div>
+<component-a model="{propOne: 'Foo!'}"></component-a>
