--- a/src/context-3/layout-3a/layout-cmp-3.html
+++ b/src/context-3/layout-3a/layout-cmp-3.html
@@ -1,4 +1,5 @@
 <ul class="layout-3a-links">
+  <li class="text-muted">Shared Links:</li>
   <li ui-sref-active="active"><a ui-sref="context3.one">Page 3.1</a></li>
   <li ui-sref-active="active"><a ui-sref="context3.two">Page 3.2</a></li>
 </ul>
