--- a/src/domain-3/page-3.1/page-cmp-3.1.html
+++ b/src/domain-3/page-3.1/page-cmp-3.1.html
@@ -1,5 +1,5 @@
 <h1 class="page-cmp-3-1">Page 3.1</h1>
-<div class="component-path">app / context-3 / page-cmp-3-1</div>
+<div class="component-path">app / domain-3 / page-cmp-3-1</div>
 
 <p ng-if="$ctrl.loading" class="loading text-muted">Fetching data asynchronously...</p>
 
