--- a/src/domain-2/page-2.1/page-cmp-2.1.html
+++ b/src/domain-2/page-2.1/page-cmp-2.1.html
@@ -1,5 +1,5 @@
 <h1 class="page-cmp-2-1">Page 2.1</h1>
-<div class="component-path">app / context-2 / page-cmp-2.1</div>
+<div class="component-path">app / domain-2 / page-cmp-2.1</div>
 <h5>Common component:</h5>
 <component-two-one items="$ctrl.items" on-select="$ctrl.setSelectedItem($event)"></component-two-one>
 <p>
