--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ngGovExample">
+<html lang="en" ng-app="govuk-angularjs-boilerplate">
 <head>
   <meta charset="UTF-8">
   <title>ngGov</title>
